# tensorcalculus

./: .gitignore  BUILDING  CMakeLists.txt  readme
cmake/: FindLAPACK.cmake  FindMKL.cmake  FindOpenMP.cmake
data/meshes/: line0.func  line0.txt  rect0.func  rect0.txt  rect1.func  rect1.txt  rect2.func  rect2.txt  rect3.func  rect3.txt  simplex0.txt
data/tensors/H2O 6-31G/: v_ijkl.ten
data/tensors/MPStensor/: h20_6-31G_mpsChem.MPSten
doc/: Doxyfile
include/: BlasInterface.hpp  Constants.hpp  LapackInterface2.hpp  StandardTraits.hpp
include/CC/: AOMOtransformation.hpp  Amplitudes.hpp  C4Interface.hpp  Contractions.hpp  MP2.hpp  SpinAdapt.hpp
include/CG/: Bisection.hpp  CGMethod.hpp  Function.hpp  PoljakRibiereUpdate.hpp  SecantMethod.hpp  SecantStepSize.hpp  ThreePG.hpp
include/DKTS/: ACMatrix.hpp  AMatrix.hpp  ARMatrix.hpp  AVector.hpp  BlockData.hpp  CMatrix.hpp  CVector.hpp  Complex.hpp  ComplexQR.hpp  ComplexSvd.hpp  DGKTSD.hpp  DGKTSDCG.hpp  DGKTSDDataBase.hpp  DGKTSDDataBaseCG.hpp  DGKTSDDataBaseNSOR.hpp  DGKTSDFullMethod.hpp  DGKTSDNSOR1.hpp  DGKTSDNSOR2.hpp  DGKTSDNSOR3.hpp  DGKTSDNewton.hpp  DGKTSDecomposer.hpp  DKTS.hpp  DKTSDData.hpp  DKTSDDataBlock.hpp  DKTSDIterationInfo.hpp  DKTSDIterationInfoBlock.hpp  DKTSDSimpleInnerProducts.hpp  DKTSTruncation.hpp  DKTSTruncation2Eps.hpp  DKTVector.hpp  DescriptionData.hpp  FolderManipulator.hpp  HMatrixInterface.hpp  IString.hpp  IntegerArray.hpp  IterationDataBlock.hpp  KTS.hpp  KTVector.hpp  LapackInterface.hpp  LongRealQR.hpp  (+16 more)
include/Matrix/: MatrixOperators.hpp
include/Mesh/: Domain.hpp  Mesh.hpp  MeshFunction.hpp  MeshFwd.hpp  MeshImpl.hpp  MeshPoint.hpp  MeshSimplex.hpp  Simplex.hpp  ValuesSimplex.hpp
include/Quadrature/: GrundmannMoellerGenerator.hpp  Node.hpp  Quadrature.hpp
include/Representation/: CPTensorRepresentation.hpp  DistanceFunctionGradient.hpp  MPSDecomposition.hpp  MPSRepresentation.hpp  TensorChainRepresentation.hpp  TensorRepresentation.hpp  TensorTrainRepresentation.hpp
include/Tensor/: CPTensor.hpp  CPTensorOperators.hpp  FullTensor.hpp  TensorBasis.hpp  TensorBasisOperators.hpp
include/Utilities/: Factorials.hpp  Functional.hpp  Index.hpp  Logger.hpp  Random.hpp  SkippedProducts.hpp  Utilities.hpp
include/Vector/: VectorOperators.hpp  WeakVector.hpp  WeakVectorOperators.hpp
source/: CMakeLists.txt
source/CC/: AOMOtransformation.cpp  Amplitudes.cpp  C4Interface.cpp  CMakeLists.txt  Contractions.cpp  MP2.cpp  SpinAdapt.cpp
source/DKTS/: CMakeLists.txt
source/DKTS/Base/: IString.cpp  IntegerArray.cpp  Random.cpp  Timer.cpp
source/DKTS/Base/HMatrix/: ACMatrix.cpp  AMatrix.cpp  ARMatrix.cpp  AVector.cpp  CMatrix.cpp  CVector.cpp  ComplexQR.cpp  ComplexSvd.cpp  HMatrixInterface.cpp  LongRealQR.cpp  LongRealSvd.cpp  RMatrix.cpp  RVector.cpp  RkCMatrix.cpp  RkRMatrix.cpp
source/DKTS/Base/Protocol/: DKTSDData.cpp  DKTSDDataBlock.cpp  DKTSDIterationInfo.cpp  DKTSDIterationInfoBlock.cpp  DescriptionData.cpp  FolderManipulator.cpp  IterationDataBlock.cpp  MainFilesWrite.cpp  Protocol.cpp  ProtocolData.cpp  ProtocolFormat.cpp  ProtocolProperties.cpp  SimpleIterationData.cpp  SimpleIterationDataBlock.cpp
source/DKTS/KTS/: DKTS.cpp  DKTVector.cpp  KTS.cpp  KTVector.cpp
source/DKTS/KTSApp/: DGKTSDCG.cpp  DGKTSDDataBase.cpp  DGKTSDDataBaseCG.cpp  DGKTSDDataBaseNSOR.cpp  DGKTSDFullMethod.cpp  DGKTSDNSOR1.cpp  DGKTSDNSOR2.cpp  DGKTSDNSOR3.cpp  DGKTSDNewton.cpp  DGKTSDecomposer.cpp  DKTSDIterationInfo.cpp  DKTSDSimpleInnerProducts.cpp  DKTSTruncation2Eps.cpp
source/DKTS/KTSD/: DGKTSD.cpp
source/Representation/: TensorRepresentation.cpp
source/Utilities/: Index.cpp
test/: CMakeLists.txt  TestUtilities.hpp
test/C4/: C4AmplitudenTest.cpp  C4Checks.cpp  C4Decomposition2.cpp  C4MP2canonicalTest.cpp  C4MP2test.cpp  C4TransformationTest.cpp  C4TransformationTest2.cpp  CMakeLists.txt  MPSTest.cpp
test/CG/: BisectionTest.cpp  CGMethodTest.cpp  CMakeLists.txt  NetworkCGMethodTest.cpp  ThreePGTest.cpp
test/CPTensor/: CMakeLists.txt  CPTensorOpsTest.cpp  CPTensorTest.cpp  TensorBasisOpsTest.cpp  TensorBasisTest.cpp
test/DKTS/: CMakeLists.txt  NewtonTest.cpp
test/Interface/: CMakeLists.txt  LapackTest.cpp
test/Matrix/: ACATest.cpp  CMakeLists.txt  GramianMatrixInversionTest.cpp
test/Quadrature/: CMakeLists.txt  GrundmannMoellerGeneratorTest.cpp
test/Representation/: CMakeLists.txt  CPALSTest.cpp  CPTensorRepresentationTest.cpp  ComponentTensorTest.cpp  TensorChainTest.cpp  TensorRepresentationHeaderTest.cpp
test/Simplex/: CMakeLists.txt  DomainTest.cpp  MeshFunctionTest.cpp  MeshTest.cpp  SimplexTest.cpp  ValuesSimplexTest.cpp
test/Utilities/: CMakeLists.txt  FactorialsTest.cpp  IndexTest.cpp  SkippedProductsTest.cpp
test/Vector/: CMakeLists.txt  VectorOpsTest.cpp  WeakVectorOpsTest.cpp  WeakVectorTest.cpp
tools/: CMakeLists.txt  Eigenfunctions.cpp
