add_subdirectory(C4)
add_subdirectory(Representation)
include_directories(./)
add_subdirectory(CG)
add_subdirectory(Interface)
add_subdirectory(Simplex)
add_subdirectory(Matrix)
add_subdirectory(CPTensor)
add_subdirectory(Vector)
add_subdirectory(Utilities)
add_subdirectory(Quadrature)
add_subdirectory(DKTS)
